add uesrname and password forms and forgot and sign up links

--- a/index.html
+++ b/index.html
@@ -43,18 +43,50 @@
                     <!--social login end-->
                     <!--divider-->
                     <div class="position-relative">
-                        
+
                         <hr class="text-secondary divider">
                         <div class="divider-content-center">or</div>
 
+                    </div>
+                    <!-- form -->
+                    <form action="#">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="bx bx-user"></i>
+                                <input type="text" class="form-control form-control-lg fs-6" placeholder="Username">
+
+                            </span>
+
+                        </div>
+                    </form>
+                    <form action="#">
+                        <div class="input-group mb-3">
+                            <span class="input-group-text">
+                                <i class="bx bx-lock"></i>
+                                <input type="password" class="form-control form-control-lg fs-6" placeholder="password">
+
+                            </span>
+
                         </div>
 
+                        <div class=" input-group mb-3">
+                            <input type="checkbox" class="form-check-input" id="formcheck">
+                            <label for="formcheck" class="form-check-label text secondary"></small> Remember me</label>
+                        </div>
+                        <div>
+                            <small><a href="#">forgot password</a>
+                        </div>
+                    </form>
+                    <!-- form -->
+                    <div class="don't have an account yet?"> <a href="#">sign up now</a>
                     </div>
 
                 </div>
 
             </div>
+
         </div>
+    </div>
     </div>
 
 </body>
